[tool.poetry]
name = "stream-lit"
version = "0.1.0"
description = ""
authors = ["nadavgk <nadavgk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
exif = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
